added more interaction through radio buttons. Reversed svg animations

--- a/docs/css/_general.scss
+++ b/docs/css/_general.scss
@@ -56,3 +56,17 @@ section {
 p {
   font-size: 2em;
 }
+
+
+// :root {
+//    background-color: #fefefe;
+//    filter: invert(100%);
+// }
+
+// * {
+//    background-color: inherit;
+// }
+
+// img:not([src*=".svg"]) {
+//    filter: invert(100%);
+// }
